# kulshan

./: .gitignore  LICENSE  README.md  kulshan-report-2026-06-16.html  pytest.ini
.github/workflows/: ci.yml  publish.yml
agent-pack/: AGENTS.md  CLAUDE.md  POWER.md  README.md  SECURITY.md
agent-pack/skills/prepare-engineer-remediation-plan/: SKILL.md
agent-pack/skills/prepare-exec-summary/: SKILL.md
agent-pack/skills/review-kulshan-report/: SKILL.md
agent-pack/skills/run-kulshan-audit/: SKILL.md
docs/: api-costs.md  architecture.md  aws-cfm-parity.md  cli.md  getting-started.md  iam-policy.md  iam-setup.md  performance-roadmap.md
docs/checks/: limit.md
docs/kulshan-docs/: kulshan-mvp-v2.md
docs/kulshan-docs/product/: CID_LOCAL_PACKS.md  EC2_CUR_MVP_IMPLEMENTATION.md  LOCAL_EVIDENCE_ENGINE.md  MTTE.md
kulshan/: CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  pyproject.toml
kulshan/agents/: AGENTS.md  CLAUDE.md  POWER.md  SECURITY.md  mcp-config.json
kulshan/agents/.kiro/skills/review-kulshan-report/: SKILL.md
kulshan/agents/.kiro/skills/run-kulshan-audit/: SKILL.md
kulshan/docs/: README.md  architecture.md  cli-reference.md  contributing.md  getting-started.md  iam-setup.md  mcp-integration.md  security-and-iam.md
kulshan/iam/: AUDIT.md  compose.py  kulshan-readonly.json  policy-hash.txt  registry.json
kulshan/iam/per-check/: core.json  cost.json  dr.json  security.json
kulshan/src/kulshan/: __init__.py  aws_runtime.py  billing_integrity.py  capabilities.py  cli.py  console_compat.py  consolidated.py  constants.py  coverage.py  errors.py  findings_processor.py  models.py  orchestrator.py  parallel.py  preflight.py  redact.py  session.py
kulshan/src/kulshan/analyze/: __init__.py  cost.py  ec2.py  errors.py  export.py  models.py
kulshan/src/kulshan/checks/cost/: __init__.py  cost_fetcher.py
kulshan/src/kulshan/checks/cost/analyzers/: advanced.py  efficiency.py
kulshan/src/kulshan/checks/cost/reporters/: exporter.py
kulshan/src/kulshan/checks/dr/: __init__.py
kulshan/src/kulshan/checks/dr/scanner/: storage.py
kulshan/src/kulshan/checks/limit/scanner/: quotas.py
kulshan/src/kulshan/checks/pulse/: __init__.py
kulshan/src/kulshan/checks/security/: __init__.py
kulshan/src/kulshan/checks/security/scanner/: data.py  logging_monitor.py  network.py
kulshan/src/kulshan/checks/security/scoring/: history.py
kulshan/src/kulshan/checks/sweep/: __init__.py
kulshan/src/kulshan/cur/: __init__.py  discovery.py  duckdb_engine.py  errors.py  payer_validation.py  s3_query.py  schema.py  source.py  validation.py
kulshan/src/kulshan/history/: __init__.py
kulshan/src/kulshan/investigate/: __init__.py  cost.py  ec2.py  ec2_cur.py  errors.py  export.py  models.py
kulshan/src/kulshan/mcp_server/: __init__.py  server.py  tools.py  worker.py
kulshan/src/kulshan/report/: html.py  sarif.py  terminal.py
kulshan/src/kulshan/telemetry/: README.md
kulshan/src/kulshan/workspace/: __init__.py  cli.py  config.py  context.py  errors.py  execution.py  migration.py  onboarding.py  paths.py  registry.py  resolution.py  sts.py  validation.py  wordlist.py
kulshan/tests/e2e/: test_full_report_snapshot.py
kulshan/tests/fixtures/checks/: cost.json
kulshan/tests/fixtures/cur/account-region-cur/: cur.parquet
kulshan/tests/fixtures/cur/sample-cur/: cur.parquet
kulshan/tests/fixtures/cur/tagged-cur/: cur.parquet
kulshan/tests/property/: test_roundtrip.py
kulshan/tests/unit/: test_advanced_analytics.py  test_analysis_regression.py  test_billing_integrity.py  test_canonical_identity.py  test_cli.py  test_cli_integration.py  test_commit5_isolation.py  test_completion.py  test_consolidated_coverage.py  test_consolidated_report.py  test_cost_analyzers.py  test_coverage.py  test_cur_payer_cli.py  test_cur_validate.py  test_denied_permissions.py  test_execution_fix.py  test_history.py  test_html_report.py  test_iam_composition.py  test_iam_source_coverage.py  test_investigate_cost.py  test_investigate_ec2_cur.py  test_isolation_proof.py  test_mcp_execution.py  test_migration.py  test_migration_integration.py  test_models.py  test_orchestrator_completeness.py  test_output_integrity.py  test_preflight_deep.py  test_redact.py  test_repl.py  test_sample_report.py  test_security_fallback_removed.py  test_theme.py  test_trust_integrity.py  test_workspace.py  test_workspace_connections.py  test_workspace_ctx_key.py  test_workspace_execution.py  (+1 more)
samples/: README.md  sample-report.html  sample-report.json
