[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "kulshan"
dynamic = ["version"]
description = "Unified CLI for cost, security, waste, DR, lifecycle, drift, tagging, observability, quota, and network analysis on cloud infrastructure."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Yuvdeep Singh" }
]
keywords = ["aws", "finops", "cost", "security", "cli", "devops", "slm", "local-ai", "mission-finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "boto3>=1.28",
    "click>=8.0",
    "rich>=13.0",
    "rich-click>=1.7",
    "jinja2>=3.1",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.25",
    "platformdirs>=4.0",
    "prompt_toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
    "pandas>=2.2.0",
    "numpy>=1.23.0",
    "plotext>=5.2.0",
    "networkx>=3.0",
    "awscrt>=0.19",
]

[project.optional-dependencies]
slm = [
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
pdf = ["weasyprint>=60.0"]
excel = ["openpyxl>=3.1.0"]
pptx = ["python-pptx>=0.6.21"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "moto[ec2,iam,s3,rds,ce,sts,organizations]>=5.0",
    "jsonschema>=4.20",
]
all = ["kulshan[slm,pdf,excel,pptx]"]

[project.scripts]
kulshan = "kulshan.cli:main"

[project.urls]
Homepage = "https://github.com/azz-kikkr/kulshan"
Repository = "https://github.com/azz-kikkr/kulshan"
Documentation = "https://github.com/azz-kikkr/kulshan/tree/master/docs"
Issues = "https://github.com/azz-kikkr/kulshan/issues"

[tool.hatch.version]
path = "src/kulshan/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kulshan"]

[tool.hatch.build]
include = [
    "src/kulshan/**/*.py",
    "src/kulshan/**/*.toml",
    "src/kulshan/**/*.sql",
    "src/kulshan/**/*.txt",
    "src/kulshan/**/*.pem",
    "src/kulshan/**/*.json",
    "src/kulshan/**/*.j2",
    "src/kulshan/**/*.html",
    "src/kulshan/**/*.css",
    "src/kulshan/**/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TID"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=kulshan --cov-report=term-missing"
markers = [
    "slow: tests that take >5s",
    "integration: requires AWS mock setup",
]
