[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "kulshan"
dynamic = ["version"]
description = "Local-first, read-only AWS audit CLI. Ten audit packs, one command, zero writes."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Mission FinOps" }
]
keywords = ["aws", "finops", "cost", "security", "cli", "devops", "audit", "read-only", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "boto3>=1.28",
    "click>=8.0",
    "rich>=13.0",
    "rich-click>=1.7",
    "jinja2>=3.1",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.25",
    "platformdirs>=4.0",
    "prompt_toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli_w>=1.0",
    "pandas>=2.2.0",
    "numpy>=1.23.0",
    "duckdb>=1.0.0",
    "plotext>=5.2.0",
    "networkx>=3.0",
    "awscrt>=0.19",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
excel = ["openpyxl>=3.1.0"]
pptx = ["python-pptx>=0.6.21"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "mcp>=1.0",
    "moto[ec2,iam,s3,rds,ce,sts,organizations]>=5.0",
    "jsonschema>=4.20",
]
all = ["kulshan[pdf,excel,pptx,mcp]"]

[project.scripts]
kulshan = "kulshan.cli:main"

[project.urls]
Homepage = "https://github.com/MissionFinOps/kulshan"
Repository = "https://github.com/MissionFinOps/kulshan"
Documentation = "https://github.com/MissionFinOps/kulshan/tree/master/kulshan/docs"
Issues = "https://github.com/MissionFinOps/kulshan/issues"
Changelog = "https://github.com/MissionFinOps/kulshan/blob/master/kulshan/CHANGELOG.md"

[tool.hatch.version]
path = "src/kulshan/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kulshan"]

[tool.hatch.build]
include = [
    "src/kulshan/**/*.py",
    "src/kulshan/**/*.toml",
    "src/kulshan/**/*.sql",
    "src/kulshan/**/*.txt",
    "src/kulshan/**/*.pem",
    "src/kulshan/**/*.json",
    "src/kulshan/**/*.j2",
    "src/kulshan/**/*.html",
    "src/kulshan/**/*.css",
    "src/kulshan/**/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TID"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=kulshan --cov-report=term-missing -p no:cacheprovider"
markers = [
    "slow: tests that take >5s",
    "integration: requires AWS mock setup",
]

[tool.hatch.build.targets.wheel.force-include]
"iam/kulshan-readonly.json" = "kulshan/iam/kulshan-readonly.json"
"iam/registry.json" = "kulshan/iam/registry.json"
"iam/policy-hash.txt" = "kulshan/iam/policy-hash.txt"

[tool.hatch.build.targets.sdist.force-include]
"iam/kulshan-readonly.json" = "iam/kulshan-readonly.json"
"iam/registry.json" = "iam/registry.json"
"iam/policy-hash.txt" = "iam/policy-hash.txt"

